# prism_ai

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
api/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: app.ts  index.ts
client/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/components/: auth-guard.tsx  auth-modal.tsx  auth-provider.tsx  chat-sidebar.tsx  navbar.tsx  settings-dialog.tsx
client/hooks/: use-socket.ts  use-toast.ts
client/lib/: api.ts
client/store/: useAuthStore.ts  useChatStore.ts  useSettingsStore.ts
client/types/: index.ts
core/: .gitignore  Dockerfile  pyproject.toml
core/src/: api_client.py  config.py  model_factory.py  worker.py
core/src/agents/: conclusion_agent.py  planning_agent.py  researcher_agent.py
core/src/tools/: crawler_tool.py  illustration_tool.py  serper_tool.py
core/tests/: test_conclusion_stream.py  test_planning_agent.py  test_researcher_agent.py  test_serper_tool.py
docs/: CLIENT_MASTER_PLAN.md  CLIENT_PROGRESS_LOG.md  index.md
docs/01-getting-started/: 01-introduction.md  02-installation.md
docs/02-architecture/: 01-overview.md  02-api-backend.md  03-client.md  (+2 more)
k8s/: api.yaml  client-backendconfig.yaml  client.yaml  configmap.template.yaml  ingress.yaml  managed-cert.yaml  postgres.yaml  redis.yaml  websocket-backendconfig.yaml  websocket.yaml  worker-hpa.yaml  worker.yaml
websocket/: Dockerfile  go.mod
(+67 files in other folders)
